# OpsBot

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  zwd-opsbot功能需求.md
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: lib.rs  main.rs
backend/src/commands/: crypto.rs  database.rs  mod.rs  sftp.rs  ssh.rs  utils.rs
backend/src/models/: connection.rs  database.rs  mod.rs  sftp.rs  ssh.rs
backend/src/services/: crypto_service.rs  database_service.rs  mod.rs  sftp_service.rs  ssh_service.rs
backend/src/services/database/: mariadb.rs  mod.rs  mssql.rs  mysql.rs  oracle.rs  postgresql.rs  session.rs  traits.rs
front/: App.tsx  main.tsx
front/components/common/: ConfirmDialog.tsx  InputDialog.tsx  index.ts
front/components/database/: CreateTableDialog.tsx  CreateTableInline.tsx  DataEditor.tsx  DatabaseConnectionDialog.tsx  DatabaseContainer.tsx  DatabaseTypeSelector.tsx  EditTableStructureDialog.tsx  EditTableStructureInline.tsx  RenameTableDialog.tsx  ResultsTable.tsx  SchemaTree.tsx  SqlEditor.tsx  (+4 more)
front/config/: databaseTypes.ts
front/i18n/: index.ts
front/lib/: utils.ts
front/services/: configExport.ts  configImport.ts  database.ts  index.ts  secureStorage.ts  sftp.ts  ssh.ts
front/stores/: connectionStore.ts  diagramStore.ts  index.ts  languageStore.ts  tabStore.ts  themeStore.ts
front/styles/: globals.css
front/types/: connection.ts  export.ts  index.ts  language.ts  tab.ts
spec/: spec0001.md
(+70 files in other folders)
