[package]
name = "zwd-opsbot"
version = "0.1.0"
description = "ZWD-OpsBot - Cross-platform Operations Terminal"
authors = ["ZWD Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zwd_opsbot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# SSH
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"

# Encryption (for storing credentials)
ring = "0.17"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
